Fix textarea alignment overriding number field styling

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -117,12 +117,12 @@ th:first-child textarea {
 }
 
 input[type="text"],
+input[type="number"],
 textarea {
   width: 100%;
   margin: 0;
   border: none;
   background: var(--color-field);
-  text-align: left;
   font-family: inherit;
   font-weight: bold;
   height: var(--row-height);
@@ -130,18 +130,13 @@ textarea {
   vertical-align: middle;
 }
 
-input[type="number"],
+input[type="text"],
 textarea {
-  width: 100%;
-  margin: 0;
-  border: none;
-  background: var(--color-field);
+  text-align: left;
+}
+
+input[type="number"] {
   text-align: center;
-  font-family: inherit;
-  font-weight: bold;
-  height: var(--row-height);
-  line-height: var(--row-height);
-  vertical-align: middle;
 }
 
 textarea {
